Changes & Refactor after Review (#3)
* Update MarketReport after moving to protos v2 (#697)

* Refactor e2e test and examples (#698)

* Changes after review

* Close feeder svc & Rename price feed info command

* Remove unused file

* Update reconnection  logic
